// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Typography variant "bodyA" renders correctly 1`] = `
<DocumentFragment>
  .cache-ofvylj {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4A4F62;
  font-size: 16px;
  line-height: 24px;
}

<p
    class="e1g1zfwd0 cache-ofvylj"
  >
    bodyA
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyA" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1nlj8ck {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4A4F62;
  font-size: 16px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1nlj8ck.cache-1nlj8ck {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-1nlj8ck"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" renders correctly 1`] = `
<DocumentFragment>
  .cache-1ov6x2c {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #B2B6C3;
  font-size: 14px;
  line-height: 18px;
}

<p
    class="e1g1zfwd0 cache-1ov6x2c"
  >
    bodyB
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyB" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1scj6hv {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #B2B6C3;
  font-size: 14px;
  line-height: 18px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1scj6hv.cache-1scj6hv {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-1scj6hv"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" renders correctly 1`] = `
<DocumentFragment>
  .cache-dev0f7 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4A4F62;
  font-size: 14px;
  line-height: 22px;
}

<p
    class="e1g1zfwd0 cache-dev0f7"
  >
    bodyC
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyC" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-qupgg0 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4A4F62;
  font-size: 14px;
  line-height: 22px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-qupgg0.cache-qupgg0 {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-qupgg0"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" renders correctly 1`] = `
<DocumentFragment>
  .cache-1weqpv0 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4A4F62;
  font-size: 14px;
  line-height: 20px;
}

<p
    class="e1g1zfwd0 cache-1weqpv0"
  >
    bodyD
  </p>
</DocumentFragment>
`;

exports[`Typography variant "bodyD" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-3ich2n {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #4A4F62;
  font-size: 14px;
  line-height: 20px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-3ich2n.cache-3ich2n {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-3ich2n"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "command" renders correctly 1`] = `
<DocumentFragment>
  .cache-11lg13w {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151A2D;
  background-color: #F6F6F8;
  padding: 8px;
}

<code
    class="e1g1zfwd0 cache-11lg13w"
  >
    command
  </code>
</DocumentFragment>
`;

exports[`Typography variant "command" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1ogmqbc {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  font-family: 'Lucida Console',Monaco,'Courier New',Courier,monospace;
  font-size: 13px;
  font-weight: 500;
  border-radius: 4px;
  color: #151A2D;
  background-color: #F6F6F8;
  padding: 8px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1ogmqbc.cache-1ogmqbc {
  width: 100px;
}

<code
    class="e1g1zfwd0 cache-1ogmqbc"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "default" renders correctly 1`] = `
<DocumentFragment>
  .cache-1u3lzwn {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
}

<div
    class="e1g1zfwd0 cache-1u3lzwn"
  >
    default
  </div>
</DocumentFragment>
`;

exports[`Typography variant "default" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-5q5vow {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-5q5vow.cache-5q5vow {
  width: 100px;
}

<div
    class="e1g1zfwd0 cache-5q5vow"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "description" renders correctly 1`] = `
<DocumentFragment>
  .cache-17aw9xd {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
}

<p
    class="e1g1zfwd0 cache-17aw9xd"
  >
    description
  </p>
</DocumentFragment>
`;

exports[`Typography variant "description" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1cxkmhn {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 16px;
  line-height: 24px;
  font-weight: 500;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1cxkmhn.cache-1cxkmhn {
  width: 100px;
}

<p
    class="e1g1zfwd0 cache-1cxkmhn"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </p>
</DocumentFragment>
`;

exports[`Typography variant "hero" renders correctly 1`] = `
<DocumentFragment>
  .cache-16i0rk8 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
}

<h1
    class="e1g1zfwd0 cache-16i0rk8"
  >
    hero
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "hero" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-xn39l9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 35px;
  line-height: 41px;
  margin-bottom: 72px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-xn39l9.cache-xn39l9 {
  width: 100px;
}

<h1
    class="e1g1zfwd0 cache-xn39l9"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h1>
</DocumentFragment>
`;

exports[`Typography variant "lead" renders correctly 1`] = `
<DocumentFragment>
  .cache-1jguers {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
}

<h2
    class="e1g1zfwd0 cache-1jguers"
  >
    lead
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-8zhx1c {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-8zhx1c.cache-8zhx1c {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-8zhx1c"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" renders correctly 1`] = `
<DocumentFragment>
  .cache-ney9l {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
}

<h2
    class="e1g1zfwd0 cache-ney9l"
  >
    lead-block
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-block" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1a31juf {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 16px;
  margin-top: 48px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1a31juf.cache-1a31juf {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-1a31juf"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" renders correctly 1`] = `
<DocumentFragment>
  .cache-xw69c5 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
}

<h2
    class="e1g1zfwd0 cache-xw69c5"
  >
    lead-text
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "lead-text" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1w20s81 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 25px;
  line-height: 25px;
  margin-bottom: 0;
  margin-bottom: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1w20s81.cache-1w20s81 {
  width: 100px;
}

<h2
    class="e1g1zfwd0 cache-1w20s81"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h2>
</DocumentFragment>
`;

exports[`Typography variant "link" renders correctly 1`] = `
<DocumentFragment>
  .cache-1c5mxk1 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
}

.cache-1c5mxk1:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="e1g1zfwd0 cache-1c5mxk1"
  >
    link
  </div>
</DocumentFragment>
`;

exports[`Typography variant "link" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-1y85ojs {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #3f6ed8;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-1y85ojs.cache-1y85ojs {
  width: 100px;
}

.cache-1y85ojs:hover {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<div
    class="e1g1zfwd0 cache-1y85ojs"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </div>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" renders correctly 1`] = `
<DocumentFragment>
  .cache-1766ra9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #F6F6F8;
  color: #151A2D;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
}

<code
    class="e1g1zfwd0 cache-1766ra9"
  >
    samplecode
  </code>
</DocumentFragment>
`;

exports[`Typography variant "samplecode" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-gwcvs9 {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  background-color: #F6F6F8;
  color: #151A2D;
  font-size: 12px;
  line-height: 16px;
  padding: 4px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-gwcvs9.cache-gwcvs9 {
  width: 100px;
}

<code
    class="e1g1zfwd0 cache-gwcvs9"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </code>
</DocumentFragment>
`;

exports[`Typography variant "tiny" renders correctly 1`] = `
<DocumentFragment>
  .cache-1xxfqrg {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #B2B6C3;
  font-size: 12px;
  line-height: 16px;
}

<small
    class="e1g1zfwd0 cache-1xxfqrg"
  >
    tiny
  </small>
</DocumentFragment>
`;

exports[`Typography variant "tiny" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-l60mcc {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #B2B6C3;
  font-size: 12px;
  line-height: 16px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-l60mcc.cache-l60mcc {
  width: 100px;
}

<small
    class="e1g1zfwd0 cache-l60mcc"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </small>
</DocumentFragment>
`;

exports[`Typography variant "title" renders correctly 1`] = `
<DocumentFragment>
  .cache-ry265h {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 21px;
  line-height: 24px;
}

<h3
    class="e1g1zfwd0 cache-ry265h"
  >
    title
  </h3>
</DocumentFragment>
`;

exports[`Typography variant "title" with tooltip renders correctly 1`] = `
<DocumentFragment>
  .cache-wh7bme {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 21px;
  line-height: 24px;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
}

.cache-wh7bme.cache-wh7bme {
  width: 100px;
}

<h3
    class="e1g1zfwd0 cache-wh7bme"
  >
    This text is quite long. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
  </h3>
</DocumentFragment>
`;

exports[`Typography with maxLines renders correctly 1`] = `
<DocumentFragment>
  .cache-1n2ig9m {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #B2B6C3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

<p
    class="e1g1zfwd0 cache-1n2ig9m"
  >
    Hello
  </p>
</DocumentFragment>
`;

exports[`Typography with multiple nested chidldren renders correctly 1`] = `
<DocumentFragment>
  .cache-1n2ig9m {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #B2B6C3;
  font-size: 14px;
  line-height: 18px;
  -webkit-line-clamp: 2;
  overflow: hidden;
  display: -webkit-box;
  -webkit-box-orient: vertical;
}

.cache-ry265h {
  color: #4A4F62;
  font-weight: 400;
  margin-bottom: 0;
  margin-top: 0;
  color: #151A2D;
  font-size: 21px;
  line-height: 24px;
}

<p
    class="e1g1zfwd0 cache-1n2ig9m"
  >
    Lorem
    <span>
      Ipsum
    </span>
    <span
      class="e1g1zfwd0 cache-ry265h"
    >
      <span>
        Dolor
      </span>
    </span>
    Sit
  </p>
</DocumentFragment>
`;
